[SDESK-4552] (fix): Assignment preview not showing from monitoring preview (#1285)

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -27,6 +27,10 @@
     }
 }
 
+.assignment-preview__side-panel {
+  opacity: 1 !important;
+}
+
 .opened-articles ul > li {
     padding: 0 25px 0 5px;
     .item-label {
